styled side bar

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1>Vijana wa kale band</h1>
-    <nav class="links">
+    <nav>
     <ul>
-        <li>Home</li>
-        <li>Services</li>
-        <li>About</li>
-        <li>Gallery</li>
-        <li>Contact Us</li>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Services">Services</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Gallery">Gallery</a></li>
+        <li><a href="#Contact Us">Contact Us</a></li>
     </ul>
-    </nav>
+
     <p>Vijana wa kale band was created with the aim of surporting the upcoming supper stars.It gives the youth the chance to explore in the world of music</p>
     <img src="https://images.pexels.com/photos/3245295/pexels-photo-3245295.jpeg?cs=srgb&dl=men-playing-on-stage-3245295.jpg&fm=jpg">
     <img src="https://images.pexels.com/photos/3536236/pexels-photo-3536236.jpeg?cs=srgb&dl=photo-of-man-playing-guitar-3536236.jpg&fm=jpg">
